--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -9,8 +9,9 @@
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-  background-color: #EFEFEF;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue',
+    sans-serif;
+  background-color: #efefef;
 }
 
 .container {
@@ -20,7 +21,6 @@ body {
   padding-right: 10px;
   margin: 0 auto;
 }
-
 
 /* ==========================================================================
    Header Styles block
@@ -55,7 +55,6 @@ header:before {
   position: relative;
 }
 
-
 /* Profile Section
    ========================================================================== */
 
@@ -77,7 +76,7 @@ header:before {
   padding-bottom: 25px;
   margin-bottom: 25px;
   border-bottom: 1px solid #dedede;
-  width: 100%
+  width: 100%;
 }
 
 .about-section img {
@@ -92,10 +91,33 @@ header:before {
   justify-content: space-around;
 }
 
-.profile-nav {
+.profile-footer {
   width: 100%;
-  background-color: orange;
+}
+
+.profile-footer ul {
+  width: 100%;
+  height: 5rem;
+  background-color: #2a313d;
   box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 6px, rgba(0, 0, 0, 0.12) 0px 1px 4px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  list-style-type: none;
+  margin-bottom: 2em;
+}
+
+.profile-footer li a {
+  text-decoration: none;
+  color: #fff;
+  font-size: 1.5em;
+  font-weight: 100;
+}
+
+.profile-footer li:active,
+.profile-footer li:visited {
+  color: #fff;
+  text-decoration: none;
 }
 
 .profile-nav .footer ul {
@@ -104,16 +126,15 @@ header:before {
 }
 
 .profile-nav li a span {
-  color: #FFF;
+  color: #fff;
 }
 
 .profile-photo {
   width: 70%;
   margin: 0 auto;
   height: 100%;
-  background-color: #FFF;
+  background-color: #fff;
 }
-
 
 /* Speechbubble
    ========================================================================== */
@@ -121,9 +142,9 @@ header:before {
 .speech-bubble {
   max-width: 80px;
   margin-bottom: 20px;
-  padding: .3rem;
+  padding: 0.3rem;
   position: relative;
-  font-size: .8rem;
+  font-size: 0.8rem;
   font-weight: 400;
   background: #ff9800;
   color: white;
@@ -147,7 +168,6 @@ header:before {
   transform-origin: center;
   transform: rotate(90deg) skew(-17deg) translateY(12px);
 }
-
 
 /* Profile Section
    ========================================================================== */
@@ -182,7 +202,7 @@ header:before {
 }
 
 .profile-list-item {
-  color: #B0B3B8;
+  color: #b0b3b8;
   font-weight: 100;
   margin-left: 0;
   margin-bottom: 15px;
@@ -191,7 +211,6 @@ header:before {
 .clearfix {
   *zoom: 1;
 }
-
 
 /* Resume Section
    ========================================================================== */
@@ -240,7 +259,6 @@ header:before {
   box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
 }
 
-
 /* ==========================================================================
    Cards Styles
    ========================================================================== */
@@ -257,7 +275,6 @@ header:before {
   font-weight: 600;
   text-align: center;
 }
-
 
 /* ==========================================================================
    Footer Styles
@@ -288,7 +305,7 @@ header:before {
 
 .footer li a {
   display: inline-block;
-  color: #FFF;
+  color: #fff;
   line-height: 44px;
   height: 44px;
   width: 44px;
@@ -311,7 +328,7 @@ header:before {
 }
 
 .card-fa-icons {
-  color: #FF9800;
+  color: #ff9800;
   font-size: 17px;
   margin-left: 5px;
 }
@@ -319,7 +336,6 @@ header:before {
 .scroll-to-top {
   display: none;
 }
-
 
 /* ==========================================================================
    Media Queries
