--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -110,8 +110,9 @@ header:before {
 .profile-footer li a {
   text-decoration: none;
   color: #fff;
-  font-size: 1.5em;
-  font-weight: 100;
+  font-size: 1.3em;
+  font-weight: 200;
+  letter-spacing: 1.3px;
 }
 
 .profile-footer li:active,
